--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Strajk Bowling
+name: CI/CD
 
 on:
   push:
@@ -6,36 +6,62 @@ on:
       - main
 
 jobs:
-
   test:
-
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Install
-        run: npm ci
-      - name: run tests with coverage
-        run: npm run coverage
-      - name: Check the coverage
-        uses: themichaelhall/check-code-coverage@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+
+      - name: Install dependecies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
         with:
-          report: coverage/clover.xml
-          required-percentage: 90
+          token: ${{ secrets.CODECOV_TOKEN }}
 
-  build:
-
-    needs: test
+  check-coverage:
     runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check test coverage
+        run: |
+          if [ ! -f ./coverage/coverage-summary.json ]; then
+          echo "Coverage report not found!"
+          exit 1
+          fi
+
+          echo "Coverage report found"
+
+          COVERAGE=$(cat ./coverage/coverage-summary.json | jq .total.lines.pct)
+          echo "Test coverage is ${COVERAGE}%"
+
+          if (( $(echo "$COVERAGE < 90" | bc -l) )); then
+          echo "Test coverage is below 90%, cannot deploy."
+          exit 1
+          fi
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: check-coverage
     permissions:
       contents: read
       pages: write
       id-token: write
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Install modules
         run: cd strajk-bowling && npm install
 
@@ -50,6 +76,6 @@ jobs:
         with:
           path: "./strajk-bowling/dist"
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy to Github Pages
         id: deployment
         uses: actions/deploy-pages@v1
