--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,8 @@
-name: CI/CD
+name: run tests and deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: main
 
 jobs:
   test:
@@ -13,69 +12,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
-
-      - name: Install dependecies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          node-version: "18"
+          cache: "npm"
 
-  check-coverage:
-    runs-on: ubuntu-latest
-    needs: test
+      - name: Install dependencies
+        run: npm ci
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Run tests with coverage
+        run: npm run coverage
 
-      - name: Check test coverage
+      - name: Check coverage threshold
         run: |
-          if [ ! -f ./coverage/coverage-summary.json ]; then
-          echo "Coverage report not found!"
-          exit 1
-          fi
-
-          echo "Coverage report found"
-
-          COVERAGE=$(cat ./coverage/coverage-summary.json | jq .total.lines.pct)
-          echo "Test coverage is ${COVERAGE}%"
-
+          COVERAGE=$(npm run coverage | grep "All files" | awk '{print $5}' | tr -d '%')
+          echo "Current coverage is $COVERAGE%"
           if (( $(echo "$COVERAGE < 90" | bc -l) )); then
-          echo "Test coverage is below 90%, need to be at least 90%."
-          exit 1
+            echo "Coverage ($COVERAGE%) is below 90%"
+            exit 1
+          else
+            echo "Coverage check passed!"
           fi
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: check-coverage
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install modules
-        run: cd strajk-bowling && npm install
-
-      - name: Build dist
-        run: cd strajk-bowling && npm run build
-
-      - name: Setup pages
-        uses: actions/configure-pages@v3
-
-      - name: Upload dist folder
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: "./strajk-bowling/dist"
-
-      - name: Deploy to Github Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
