--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
-name: run tests and deploy
+name: Run tests and deploy
 
 on:
   push:
-    branches: main
+    branches:
+      - main
 
 jobs:
   test:
@@ -12,25 +13,69 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-          cache: "npm"
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests with coverage
-        run: npm run coverage
-
-      - name: Check coverage threshold
+      - name: Remove node_modules and package-lock.json
         run: |
-          COVERAGE=$(npm run coverage | grep "All files" | awk '{print $5}' | tr -d '%')
-          echo "Current coverage is $COVERAGE%"
-          if (( $(echo "$COVERAGE < 90" | bc -l) )); then
-            echo "Coverage ($COVERAGE%) is below 90%"
-            exit 1
-          else
-            echo "Coverage check passed!"
+          rm -rf node_modules
+          rm -f package-lock.json
+
+      - name: Install dependecies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
+
+  check-coverage:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check test coverage
+        run: |
+          if [ ! -f ./coverage/coverage-summary.json ]; then
+          echo "Coverage report not found!"
+          exit 1
           fi
+
+          echo "Coverage report found"
+
+          COVERAGE=$(cat ./coverage/coverage-summary.json | jq .total.lines.pct)
+          echo "Test coverage is ${COVERAGE}%"
+
+          if (( $(echo "$COVERAGE < 90" | bc -l) )); then
+          echo "Test coverage is below 90%, cannot deploy."
+          exit 1
+          fi
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: check-coverage
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install modules
+        run: npm install
+
+      - name: Build dist
+        run: npm run build
+
+      - name: Setup pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload dist folder
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: "./dist"
+
+      - name: Deploy to Github Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
