--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,13 +42,19 @@ jobs:
 
       - name: Check test coverage
         run: |
-          COVERAGE=$(npm run coverage | grep "All files" | awk '{print $5}' | tr -d '%')
-          echo "Current coverage is $COVERAGE%"
+          if [ ! -f ./coverage/coverage-summary.json ]; then
+          echo "Coverage report not found!"
+          exit 1
+          fi
+
+          echo "Coverage report found"
+
+          COVERAGE=$(cat ./coverage/coverage-summary.json | jq .total.lines.pct)
+          echo "Test coverage is ${COVERAGE}%"
+
           if (( $(echo "$COVERAGE < 90" | bc -l) )); then
-            echo "Coverage ($COVERAGE%) is below 90%"
-            exit 1
-          else
-            echo "Coverage check passed!"
+          echo "Test coverage is below 90%, cannot deploy."
+          exit 1
           fi
 
   deploy:
